k8s/platform/manifests/network-policies/staging/40-allow-audit-egress-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-audit-service-egress-to-postgres
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: audit-service
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.15/32
      ports:
        - protocol: TCP
          port: 5432
