k8s/platform/manifests/network-policies/staging/40-allow-egress-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-postgres
  namespace: staging
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - auth-service
          - user-service
          - catalog-service
          - audit-service
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.8/32
        - ipBlock:
            cidr: 192.168.0.15/32
      ports:
        - protocol: TCP
          port: 5432
