k8s/platform/manifests/network-policies/staging/allow-audit-migrate-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-audit-migrate-to-postgres
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: audit-service-migrate

  policyTypes:
    - Egress

  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.15/32
      ports:
        - protocol: TCP
          port: 5432
