k8s/platform/manifests/network-policies/staging/allow-audit-service-egress-to-rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-audit-service-egress-to-rabbitmq
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: audit-service
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.17/32
      ports:
        - protocol: TCP
          port: 5672
