k8s/platform/manifests/network-policies/staging/allow-node-health-probes-to-catalog-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-health-probes-to-catalog-service
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: catalog-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/24
      ports:
        - protocol: TCP
          port: 3003
