k8s/platform/manifests/network-policies/staging/allow-user-service-egress-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-service-egress-to-redis
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: user-service
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.18/32
      ports:
        - protocol: TCP
          port: 6379
